# capstone-team3

./: .gitignore  README.md  benchmark.py  config.py  debug_cnn.py  debug_yolo.py  main.py  pipeline.py  pyproject.toml  sample_wb.py  scan_metadata.py
ai_server/: HANDOFF_TODO.md  config.py  cv_utils.py  inference.py  main.py  models.py  ocr_utils.py  schemas.py  scoring.py  vlm_utils.py
ai_server/server_pipeline/: run.py
application/: AI_SERVER_CONTRACT.md
application/backend/: categorize_medicines.py  main.py  migrate_medicines.py  migrate_metadata.py
application/frontend/: analysis_options.yaml  generate_pwa_icons.py  pubspec.yaml
application/frontend/lib/: main.dart
application/frontend/lib/config/: api_config.dart
application/frontend/lib/screens/: analysis_page.dart  chatbot_page.dart  home_page.dart  login_page.dart  my_pills_page.dart  profile_page.dart  scan_page.dart  search_page.dart  signup_page.dart
application/frontend/lib/state/: my_pills_store.dart  user_store.dart
application/frontend/lib/theme/: app_colors.dart  app_theme.dart
application/frontend/lib/widgets/: bottom_nav_bar.dart  category_badge.dart
dataset/: drug_image.csv  drug_interactions.csv  medicines_metadata.csv  medicines_name.txt  metadata_summary.json  yolo_dataset.yaml
debug_ocr/: debug_ocr.py
debug_opencv/: debug_opencv.py
debug_pipeline/: debug_pipeline.py
src/: evaluate.py  inference.py  model.py  preprocess.py  train.py
train_CNN/: dataset_cnn.py  prepare_cnn.py  train.py
train_YOLO/: prepare_yolo.py  train_yolo.py
