[project]
name = "capstone-design"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "easyocr>=1.7.2",
    "fastapi>=0.136.3",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.29",
    "rapidfuzz>=3.14.5",
    "rembg[gpu]>=2.0.75",
    "timm>=1.0.26",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "tqdm>=4.67.3",
    "ultralytics>=8.4.46",
    "uvicorn>=0.48.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
